<?xml version="1.0" encoding="UTF-8"?>
<!--
 Licensed to the Apache Software Foundation (ASF) under one
 or more contributor license agreements.  See the NOTICE file
 distributed with this work for additional information
 regarding copyright ownership.  The ASF licenses this file
 to you under the Apache License, Version 2.0 (the
 "License"); you may not use this file except in compliance
 with the License.  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing,
 software distributed under the License is distributed on an
 "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.apache</groupId>
        <artifactId>apache</artifactId>
        <version>23</version>
        <relativePath />
    </parent>

    <groupId>org.apache.aries.spifly</groupId>
    <artifactId>spifly</artifactId>
    <version>1.3.4-SNAPSHOT</version>
    <name>Apache Aries SPI Fly</name>
    <packaging>pom</packaging>
    <description>
        SPI support for OSGi
    </description>

    <scm>
        <connection>scm:git:https://gitbox.apache.org/repos/asf/aries.git</connection>
        <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/aries.git</developerConnection>
        <url>https://gitbox.apache.org/repos/asf?p=aries.git;a=summary</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.scm.id>apache.releases.https</project.scm.id>

        <apache-rat-plugin.version>0.13</apache-rat-plugin.version>
        <asm.version>9.2</asm.version>
        <bnd.version>5.3.0</bnd.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <osgi.core.version>5.0.0</osgi.core.version>
        <slf4j.version>1.7.30</slf4j.version>

        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <java.source.version>1.8</java.source.version>
    </properties>

    <modules>
        <module>spi-fly-core</module>
        <module>spi-fly-weaver</module>
        <module>spi-fly-dynamic-bundle</module>
        <module>spi-fly-dynamic-framework-extension</module>
        <module>spi-fly-static-tool</module>
        <module>spi-fly-static-bundle</module>
        <module>spi-fly-examples</module>
        <module>spi-fly-itests</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.osgi</groupId>
                <artifactId>osgi.core</artifactId>
                <version>${osgi.core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <scope>test</scope>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.aries.versioning</groupId>
                    <artifactId>org.apache.aries.versioning.plugin</artifactId>
                    <version>0.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <optimize>true</optimize>
                        <debug>true</debug>
                        <showDeprecation>true</showDeprecation>
                        <showWarnings>true</showWarnings>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.0.0-M3</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
                        <forkMode>once</forkMode>
                        <argLine>
                            -enableassertions
                        </argLine>
                        <failIfNoTests>false</failIfNoTests>
                        <workingDirectory>${project.build.directory}</workingDirectory>
                        <excludes>
                            <exclude>**/Abstract*.java</exclude>
                            <exclude>**/Test*.java</exclude>
                        </excludes>
                        <includes>
                            <include>**/*Test.java</include>
                        </includes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.2.7</version>
                <configuration>
                    <flattenMode>oss</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten-clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <properties>
                <!-- <maven.compiler.release>${java.specification.version}</maven.compiler.release> -->
            </properties>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <version>3.0.0-M5</version>
                            <configuration>
                                <redirectTestOutputToFile>true</redirectTestOutputToFile>
                                <forkMode>once</forkMode>
                                <argLine>
                                    -enableassertions
                                    --add-opens java.base/java.lang=ALL-UNNAMED
                                </argLine>
                                <failIfNoTests>false</failIfNoTests>
                                <workingDirectory>${project.build.directory}</workingDirectory>
                                <excludes>
                                    <exclude>**/Abstract*.java</exclude>
                                    <exclude>**/Test*.java</exclude>
                                </excludes>
                                <includes>
                                    <include>**/*Test.java</include>
                                </includes>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
        <profile>
            <id>rat</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.rat</groupId>
                        <artifactId>apache-rat-plugin</artifactId>
                        <version>${apache-rat-plugin.version}</version>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <reportFile>${project.build.directory}/${project.build.finalName}.rat</reportFile>
                            <excludeSubProjects>false</excludeSubProjects>
                            <excludes>
                                <exclude>**/target/**/*</exclude>
                                <exclude>**/appended-resources/**/*</exclude>
                                <exclude>**/dependency-reduced-pom.xml</exclude>
                                <exclude>**/velocity.log</exclude>
                                <exclude>**/DEPENDENCIES</exclude>
                                <!-- exclude IntelliJ IDEA generated files -->
                                <exclude>**/*.iml</exclude>
                                <exclude>**/*.ipr</exclude>
                                <exclude>**/*.iws</exclude>
                                <exclude>**/.idea/**/*</exclude>
                                <!-- exclude Eclipse IDE generated files -->
                                <exclude>**/.project</exclude>
                                <exclude>**/.classpath</exclude>
                                <exclude>**/.settings/**</exclude>
                                <exclude>**/.vscode/settings.json</exclude>
                                <exclude>**/eclipse-classes/**/*</exclude>
                                <!-- manifest files don't support comments so don't contain the ASL2.0 header -->
                                <exclude>**/*.MF</exclude>
                                <!--RAT doesn't seem to recognize MIT style licenses-->
                                <exclude>manual/src/styles/print.css</exclude>
                                <!-- RAT doesn't recognize BSD license in transaction-manager logger -->
                                <exclude>**/objectweb/howl/log/Logger.java</exclude>
                                <!--RAT doesn't seem to recognize W3C license -->
                                <exclude>**/xml.xsd</exclude>
                                <exclude>.gitignore</exclude>
                                <exclude>changelog.md</exclude>
                                <exclude>README.md</exclude>
                                <exclude>*.cfg</exclude>
                                <exclude>**/README.md</exclude>
                                <exclude>**/Readme.md</exclude>
                                <exclude>**/NOTICE.vm</exclude>
                                <exclude>**/dependency-reduced-pom.xml</exclude>
                                <exclude>**/src/main/resources/META-INF/services/*</exclude>
                                <exclude>**/src/main/resources/org/apache/aries/spifly/test/blah.txt</exclude>
                                <exclude>tck/apply-to-tck.sh</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
